metadata/force-app/main/default/objects/ccrz__E_Coupon__c/ccrz__E_Coupon__c.object-meta.xml
<CustomObject>
    <description>Coupons provide special pricing Rules that can be applied to User&apos;s Carts and Orders</description>
    <label>CC Coupon</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Coupon Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>