metadata/force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__DiscountType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DiscountType__c</fullName>
    <description>This field is populated using a value from the DiscountType Custom Setting.</description>
    <inlineHelpText>Enter one of the following discount types: Absolute, Percentage, or Price</inlineHelpText>
    <label>Discount Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>