metadata/force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__MinQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MinQty__c</fullName>
    <description>Minimum Quantity to be qualified for discount</description>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>