metadata/force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__SourceMinQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SourceMinQty__c</fullName>
    <description>Source Minimum Quantity</description>
    <label>Source Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>